fixed alignment of filter terms. Fixed bug with filter

--- a/CSS/myCSS.css
+++ b/CSS/myCSS.css
@@ -169,9 +169,32 @@ section#projects h1 {
 section#projects p {
 	color:white;
 }
+section#projects strong {
+	position:relative;
+	z-index:5;
+	margin-bottom:15px;
+	color:white;
+	font-family:Nexa-Bold;
+}
+div#filter_gallery { 
+	margin-left:auto;
+	margin-right:auto;
+	display: flex;
+	flex-direction: row;
+    flex-wrap: wrap;
+    /* For backwards compatibility */
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+}
 button.filter {
 	position:relative;
 	z-index:5;
+	background:none; /* TODO: ADD BACKGROUND TO BE GOLD OR BLUE */
+	padding:5px;
+	margin: 0 auto; /* center buttons in div */
+	margin-bottom:20px;
+	text-transform: uppercase;
+	font-family:Nexa-Light;
 }
 #cloud1, #cloud2, #coin1, #coin3, #coin4, #coin5, #coin6 {
 	position:absolute;
@@ -254,6 +277,7 @@ section#contact {
 	section#gallery {
 		min-height:100px;
 	}
+	div#filter_gallery { max-width: 50%; }
 	.project {
 		padding:0;
 		height:100px;
@@ -342,6 +366,7 @@ section#contact {
 		margin-top:35px;
 		margin-right:-100px;
 	}
+	div#filter_gallery { max-width: 100%; }
 
 }
 
